--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "http": "0.0.1-security",
     "redis": "^3.0.2",
     "websocket": "^1.0.31",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "uuid": "^8.3.2"
   }
 }
