--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "http": "0.0.1-security",
-    "redis": "^3.0.2",
-    "websocket": "^1.0.31",
     "nodemon": "^2.0.4",
-    "uuid": "^8.3.2"
+    "redis": "^3.0.2",
+    "uuid": "^8.3.2",
+    "websocket": "^1.0.31",
+    "wrtc": "^0.4.7"
   }
 }
