--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,19 @@ services:
         volumes:
             - ./haproxy:/usr/local/etc/haproxy
     ws1:
-        image: chatterona
+        image: brancounts1/chatterona-websocket-api
         environment:
             - APPID=1111
     ws2:
-        image: chatterona
+        image: brancounts1/chatterona-websocket-api
         environment:
             - APPID=2222
     ws3:
-        image: chatterona
+        image: brancounts1/chatterona-websocket-api
         environment:
             - APPID=3333
     ws4:
-        image: chatterona
+        image: brancounts1/chatterona-websocket-api
         environment:
             - APPID=4444
     rds:
